ehci(4): fix PR kern/56574: uaudio at ehci (not xhci) only outputs rapid gunfire (patch from nick)